--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "AD Creative Live Editor",
+      "name": "D4 Preview",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
